<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.sign.up.SignUpView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/sign_background"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/sign_background">

    <TextView
        android:id="@+id/signUpId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/text_color"
        android:textSize="34dp" />

    <TextView
        android:id="@+id/emailSignUpTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpId"
        android:text="@string/email"
        android:textColor="@color/text_color"
        android:textSize="26dp" />

    <EditText
        android:id="@+id/signUpEmailEditView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailSignUpTextId"
        android:hint="@string/enter_email"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color" />

    <TextView
        android:id="@+id/signUpPasswordTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpEmailEditView"
        android:text="@string/password"
        android:textColor="@color/text_color"
        android:textSize="26dp" />

    <EditText
        android:id="@+id/signUpPasswordEditView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpPasswordTextId"
        android:hint="@string/enter_password"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color" />

    <TextView
        android:id="@+id/repeatPasswordTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpPasswordEditView"
        android:text="@string/repeat_password_u"
        android:textColor="@color/text_color"
        android:textSize="26dp" />

    <EditText
        android:id="@+id/repeatPasswordEditView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/repeatPasswordTextId"
        android:layout_marginTop="8dp"
        android:hint="@string/repeat_password"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color" />
        <TextView
            android:id="@+id/enterNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/repeatPasswordEditView"
            android:text="@string/enter_name"
            android:textColor="@color/text_color"
            android:textSize="26dp" />

        <EditText
            android:id="@+id/enterNameEditView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enterNameTextView"

            android:hint="@string/enter_name"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enterNameEditView"

            android:background="@color/button_background"
            android:text="@string/sign_up"
            android:textColor="@color/text_color"
            android:textSize="16dp" />
    </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="6">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:maxLines="1"
            android:text="@string/already_have_an_account"
            android:textColor="@color/gray_two"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/signInButtonView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_weight="2"
            android:maxLines="1"
            android:text="@string/sign_in"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>
</FrameLayout>