<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.duofynnu.presentation.roomhomepage.ui.roomprofile.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.duofynnu.presentation.roomhomepage.ui.roomchats.RoomChatsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_room_chats" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.duofynnu.presentation.roomhomepage.ui.challenges.ChallengesFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_challenges" />
</navigation>