<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.sign.in.SignInView">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/sign_background"
  >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/sign_background">
        <TextView
            android:id="@+id/signInId"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:layout_gravity="center"
            android:text="@string/sign_in"
            android:textSize="34dp"/>
        <TextView
            android:id="@+id/emailTextId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="26dp"
            android:text="@string/email"
            android:textColor="@color/text_color"
            android:layout_below="@id/signInId"/>
        <EditText
            android:id="@+id/emailEditView"
            android:layout_below="@id/emailTextId"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:textColorHint="@color/text_color"
            />

        <TextView
            android:id="@+id/passwordTextId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="26dp"
            android:text="@string/password"
            android:textColor="@color/text_color"
            android:layout_below="@id/emailEditView"/>
        <EditText
            android:id="@+id/passwordEditView"
            android:layout_below="@id/passwordTextId"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:textColorHint="@color/text_color"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInButton"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/passwordEditView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/button_background"
            android:textColor="@color/text_color"
            android:textSize="16dp"
            android:text="@string/sign_in"/>
    </RelativeLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="6">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:maxLines="1"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/gray_two"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/registerButtonView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_weight="2"
            android:maxLines="1"
            android:onClick="onClickSignUp"
            android:text="@string/sign_up"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

</FrameLayout>