<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.homepage.rooms.addrooms.AddRoomsView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/sign_background"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Add Room"
            android:textColor="@color/text_color"
            android:textSize="44dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/enter_name_room"
            android:textColor="@color/text_color"
            android:textSize="26dp" />

        <EditText
            android:id="@+id/enterRoomNameEditView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_name_room"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:textSize="18dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/enter_room_password"
            android:textColor="@color/text_color"
            android:textSize="26dp" />

        <EditText
            android:id="@+id/enterRoomPasswordEditView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_room_password"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:textSize="18dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/repeat_password"
            android:textColor="@color/text_color"
            android:textSize="26dp" />

        <EditText
            android:id="@+id/enterRoomRepeatPasswordEditView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/repeat_password"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:textSize="18dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:background="@color/button_background"
            android:text="@string/create_room"
            android:textColor="@color/text_color"
            android:textSize="18dp" />

    </LinearLayout>
</FrameLayout>